--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
     "react-dom": "^18",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "react-hook-form": "^7.51.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
