--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "prettier-plugin-astro": "^0.13.0",
